[tool.poetry]
name = "passwd-generator"
version = "0.1.0"
description = ""
authors = ["Alan-MTuring <yangxuangui1999@gmail.com>"]
readme = "README.md"
packages = [{include = "passwd_generator"}]

[tool.poetry.dependencies]
python = "^3.10"
pyperclip = "^1.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
